tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"if true { echo 10 } else {}\"))"
---
[
    (
        Statement(
            (
                IfCondition(
                    (
                        "if",
                        0..2,
                    ),
                    (
                        IfCondition(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                Block(
                                    [],
                                    [
                                        (
                                            Echo(
                                                (
                                                    "echo",
                                                    10..14,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            10.0,
                                                            15..17,
                                                        ),
                                                    ),
                                                    15..17,
                                                ),
                                            ),
                                            10..17,
                                        ),
                                    ],
                                ),
                                8..19,
                            ),
                        ),
                        3..19,
                    ),
                    [],
                    Some(
                        (
                            Else(
                                (
                                    "else",
                                    20..24,
                                ),
                                (
                                    Block(
                                        [],
                                        [],
                                    ),
                                    25..27,
                                ),
                            ),
                            20..27,
                        ),
                    ),
                ),
                0..27,
            ),
        ),
        0..27,
    ),
]
