tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"if true { echo 10 } else { echo 20 }\"))"
---
[
    (
        Statement(
            (
                IfCondition(
                    (
                        "if",
                        0..2,
                    ),
                    (
                        IfCondition(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                Block(
                                    [],
                                    [
                                        (
                                            Echo(
                                                (
                                                    "echo",
                                                    10..14,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            10.0,
                                                            15..17,
                                                        ),
                                                    ),
                                                    15..17,
                                                ),
                                            ),
                                            10..17,
                                        ),
                                    ],
                                ),
                                8..19,
                            ),
                        ),
                        3..19,
                    ),
                    Some(
                        (
                            Else(
                                (
                                    "else",
                                    20..24,
                                ),
                                (
                                    Block(
                                        [],
                                        [
                                            (
                                                Echo(
                                                    (
                                                        "echo",
                                                        27..31,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                20.0,
                                                                32..34,
                                                            ),
                                                        ),
                                                        32..34,
                                                    ),
                                                ),
                                                27..34,
                                            ),
                                        ],
                                    ),
                                    25..36,
                                ),
                            ),
                            20..36,
                        ),
                    ),
                ),
                0..36,
            ),
        ),
        0..36,
    ),
]
