tests/grammar/snapshots/r#mod__grammar__alpha034__just_dollar.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
]
