tests/grammar/snapshots/r#mod__grammar__alpha034__lexer.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\n        let x = \"my \\\"interpolated\\\" string {name} end\";\n\n        $this --should be - tokenized \\$$\n        \"unclosed string\n\n        abcd {let x = 10\n    \"#)"
---
[
    (
        Token(
            "let",
        ),
        9..12,
    ),
    (
        Token(
            "x",
        ),
        13..14,
    ),
    (
        Token(
            "=",
        ),
        15..16,
    ),
    (
        Token(
            "\"",
        ),
        17..18,
    ),
    (
        Token(
            "my ",
        ),
        18..21,
    ),
    (
        Token(
            "\\\"",
        ),
        21..23,
    ),
    (
        Token(
            "interpolated",
        ),
        23..35,
    ),
    (
        Token(
            "\\\"",
        ),
        35..37,
    ),
    (
        Token(
            " string ",
        ),
        37..45,
    ),
    (
        Token(
            "{",
        ),
        45..46,
    ),
    (
        Token(
            "name",
        ),
        46..50,
    ),
    (
        Token(
            "}",
        ),
        50..51,
    ),
    (
        Token(
            " end",
        ),
        51..55,
    ),
    (
        Token(
            "\"",
        ),
        55..56,
    ),
    (
        Token(
            ";",
        ),
        56..57,
    ),
    (
        Token(
            "$",
        ),
        67..68,
    ),
    (
        Token(
            "this --should be - tokenized ",
        ),
        68..97,
    ),
    (
        Token(
            "\\$",
        ),
        97..99,
    ),
    (
        Token(
            "$",
        ),
        99..100,
    ),
    (
        Token(
            "\"",
        ),
        109..110,
    ),
    (
        Token(
            "unclosed string\n\n        abcd ",
        ),
        110..140,
    ),
    (
        Token(
            "{",
        ),
        140..141,
    ),
    (
        Token(
            "let",
        ),
        141..144,
    ),
    (
        Token(
            "x",
        ),
        145..146,
    ),
    (
        Token(
            "=",
        ),
        147..148,
    ),
    (
        Token(
            "10",
        ),
        149..151,
    ),
]
