tests/grammar/snapshots/r#mod__grammar__alpha034__loops.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"loop {}\"))"
---
[
    (
        Statement(
            (
                InfiniteLoop(
                    (
                        "loop",
                        0..4,
                    ),
                    (
                        Block(
                            [],
                            [],
                        ),
                        5..7,
                    ),
                ),
                0..7,
            ),
        ),
        0..7,
    ),
]
