tests/grammar/snapshots/r#mod__grammar__alpha034__main_block-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"main\"))"
---
(
    Some(
        [
            (
                Main(
                    (
                        "main",
                        0..4,
                    ),
                    None,
                    [],
                ),
                0..4,
            ),
        ],
    ),
    [
        found end of input at 4..4 expected '"("', or '"{"',
        found end of input at 4..4 expected '"{"', "statement", or '"}"',
    ],
)
