tests/grammar/snapshots/r#mod__grammar__alpha034__main_block.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        main {\n            echo 10\n        }\n\n        main (args) {\n            echo args;\n        }\n    \"))"
---
[
    (
        Main(
            (
                "main",
                9..13,
            ),
            None,
            [
                (
                    Echo(
                        (
                            "echo",
                            28..32,
                        ),
                        (
                            Number(
                                (
                                    10.0,
                                    33..35,
                                ),
                            ),
                            33..35,
                        ),
                    ),
                    28..35,
                ),
            ],
        ),
        9..45,
    ),
    (
        Main(
            (
                "main",
                55..59,
            ),
            Some(
                (
                    "args",
                    60..66,
                ),
            ),
            [
                (
                    Echo(
                        (
                            "echo",
                            81..85,
                        ),
                        (
                            Var(
                                (
                                    "args",
                                    86..90,
                                ),
                            ),
                            86..90,
                        ),
                    ),
                    81..90,
                ),
            ],
        ),
        55..101,
    ),
]
