tests/grammar/snapshots/r#mod__grammar__alpha034__multiply-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"1 * 2 *\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Multiply(
                                    (
                                        Multiply(
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        0..1,
                                                    ),
                                                ),
                                                0..1,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        4..5,
                                                    ),
                                                ),
                                                4..5,
                                            ),
                                        ),
                                        0..5,
                                    ),
                                    (
                                        Error,
                                        7..7,
                                    ),
                                ),
                                0..7,
                            ),
                        ),
                        0..7,
                    ),
                ),
                0..7,
            ),
        ],
    ),
    [
        found end of input at 7..7 expected "expression",
    ],
)
